tests/snapshots/run_wpt_conformance__trtx_dequantizeLinear_uint4_4D_tensor_with_broadcasting_float32_4D_scale_and_uint4_4D_zeroPoint.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
dequantizeLinear.https.any.js dequantizeLinear uint4 4D tensor with broadcasting float32 4D scale and uint4 4D zeroPoint, trtx
 dequantizeLinear :: dequantizeLinear uint4 4D tensor with broadcasting float32 4D scale and uint4 4D zeroPoint: index 0: actual=-9.343093 expected=-18.686186 ulp=8388608 tolerance=4
  inputs: dequantizeLinearInput: [0, 1, 10, 15]; dequantizeLinearScale: [9.343092918395996, 4.617084980010986] (constant); dequantizeLinearZeroPoint: [2, 3] (constant)
  expected dequantizeLinearOutput: [-18.686186, -9.343093, 32.319595, 55.40502]
  actual dequantizeLinearOutput: [-9.343093, 1616.3551, -13.851255, -13.851255]
  expected dequantizeLinearOutput full nd:
(shape [1, 1, 2, 2])
  [-18.686186, -9.343093] [32.319595, 55.40502]
  actual dequantizeLinearOutput full nd:
(shape [1, 1, 2, 2])
  [-9.343093, 1616.3551] [-13.851255, -13.851255]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    dequantizeLinearInput: u4[1, 1, 2, 2];
  }

  consts {
    operand_1: f32[1, 1, 2, 1] @bytes([79, 125, 21, 65, 41, 191, 147, 64]);
    operand_2: u4[1, 1, 2, 1] @bytes([35]);
  }

  nodes {
    [dequantizeLinearOutput] = dequantizeLinear(dequantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { dequantizeLinearOutput; }
}
