tests/snapshots/run_wpt_conformance__trtx_dequantizeLinear_uint8_1D_constant_tensor_with_float32_1D_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "dequantizeLinear.https.any.js",
    "dequantizeLinear uint8 1D constant tensor with float32 1D scale",
    "trtx",
    Failed {
        msg: Some(
            "Failed to build graph: Runtime error: Failed to build serialized network\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  consts {\n    operand_0: f32[4] @bytes([79, 125, 21, 65, 43, 101, 143, 62, 41, 191, 147, 64, 42, 101, 143, 63]);\n    operand_1: u8[4] @bytes([12, 24, 35, 123]);\n    operand_2: u8[4] @bytes([128, 128, 128, 128]);\n  }\n\n  nodes {\n    [dequantizeLinearOutput] = dequantizeLinear(operand_1, operand_0, operand_2, label=\"\");\n  }\n\n  outputs { dequantizeLinearOutput; }\n}\n",
        ),
    },
)
