tests/snapshots/run_wpt_conformance__trtx_dequantizeLinear_with_float32_3D_scale_as_an_intermediate_node.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
dequantizeLinear.https.any.js dequantizeLinear with float32 3D scale as an intermediate node, trtx
 dequantizeLinear :: dequantizeLinear with float32 3D scale as an intermediate node: index 0: actual=0 expected=-1.1202748 ulp=1066362154 tolerance=16
  inputs: dequantizeLinearInput: [34, 23]; dequantizeLinearScale: [1.120274782180786, 0.2800687253475189] (constant); dequantizeLinearZeroPoint: [35, -24] (constant)
  expected dequantizeLinearOutput: [-1.1202748, 13.16323]
  actual dequantizeLinearOutput: [0, 0]
  expected dequantizeLinearOutput full nd:
(shape [1, 1, 2])
[-1.1202748, 13.16323]
  actual dequantizeLinearOutput full nd:
(shape [1, 1, 2])
[0, 0]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    dequantizeLinearInput: i32[2, 1];
  }

  consts {
    operand_1: f32[1, 1, 2] @bytes([42, 101, 143, 63, 43, 101, 143, 62]);
    operand_2: i32[1, 1, 2] @bytes([35, 0, 0, 0, 232, 255, 255, 255]);
  }

  nodes {
    [operand_3] = transpose(dequantizeLinearInput, label="", permutation=[1, 0]);
    [operand_4] = reshape(operand_3, label="");
    [dequantizeLinearOutput] = dequantizeLinear(operand_4, operand_1, operand_2, label="");
  }

  outputs { dequantizeLinearOutput; }
}
